--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ethers": "^4.0.46",
     "evmasm": "0.0.3",
     "module": "^1.2.5",
+    "regenerator-runtime": "^0.13.7",
     "roboto-fontface": "*",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
