--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "core-js": "^2.6.5",
     "ethers": "^4.0.46",
     "evmasm": "0.0.3",
-    "mevm": "^0.0.1",
+    "mevm": "file:../packages/mevm/",
     "module": "^1.2.5",
     "regenerator-runtime": "^0.13.7",
     "roboto-fontface": "*",
