--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.2.0",
+    "@pipeos/taylor": "^0.0.10",
     "@remixproject/plugin": "^0.2.0-alpha.5",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "ethers": "^4.0.46",
-    "evmasm": "0.0.3",
+    "@pipeos/evmasm": "0.0.4",
     "mevm": "file:../packages/mevm/",
     "module": "^1.2.5",
     "regenerator-runtime": "^0.13.7",
