--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "ethers": "^4.0.46",
-    "@pipeos/evmasm": "0.0.4",
+    "@pipeos/evmasm": "^0.0.8",
     "masm": "^0.0.6",
     "module": "^1.2.5",
     "regenerator-runtime": "^0.13.7",
